--- a/01-Login/templates/home.html
+++ b/01-Login/templates/home.html
@@ -8,6 +8,11 @@
     <h1>Welcome {{session.userinfo.name}}!</h1>
     <p><a href="/logout" id="qsLogoutBtn">Logout</a></p>
     <div><pre>{{pretty}}</pre></div>
+    {% for item in lyrics %}
+      <tr>
+        <td>{{item}}</td>
+      </tr>
+    {% endfor %}
     {% else %}
     <h1 id="profileDropDown">Welcome Guest</h1>
     <p><a href="/login" id="qsLoginBtn">Login</a></p>
