Triggers added - some clean up done as well

--- a/01-Login/templates/home.html
+++ b/01-Login/templates/home.html
@@ -14,7 +14,7 @@
             {%if key == "Name":%}
             <tr>
               
-              <td><br><br>{{value}}</td>
+              <td><br><br><b>{{value}}</b></td>
             </tr>
             {%endif%}
             {%if key == "Actions"%}
