--- a/01-Login/templates/home.html
+++ b/01-Login/templates/home.html
@@ -40,6 +40,7 @@
     {% else %}
     <h1 id="profileDropDown">Welcome Guest</h1>
     <h1>to the Client Action lister</h1>
+    <h1>You must be an Admin to use this app</h1>
     <p><a href="/login" id="qsLoginBtn">Login</a></p>
     {% endif %}
   </body>
